# RTSP

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_news.py  test_tavily.py
logics/: news.py  predictor.py  sentiment.py  symbols.py
static/: app.js
static/js/: chart-config.js  chart.js  search.js
templates/: index.html
